--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>helloworld.Application</param-value>
+        <param-value>helloworld.AppConfig</param-value>
     </context-param>
 
     <!-- Faces Servlet -->
@@ -43,6 +43,6 @@
 
     <!-- welcome file mapping -->
     <welcome-file-list>
-        <welcome-file>faces/pages/hello.xhtml</welcome-file>
+        <welcome-file>index.html</welcome-file>
     </welcome-file-list>
 </web-app>
