--- a/pom.xml
+++ b/pom.xml
@@ -56,18 +56,19 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
+				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>7.3.1.v20110307</version>
+				<version>9.2.1.v20140609</version>
 				<configuration>
 					<scanIntervalSeconds>10</scanIntervalSeconds>
 					<stopKey>killSwitch</stopKey>
 					<stopPort>9999</stopPort>
-					<connectors>
-						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-							<port>9090</port>
-						</connector>
-					</connectors>
+					<webApp>
+						<contextPath>/jsf2-helloworld</contextPath>
+					</webApp>
+					<httpConnector>
+						<port>9090</port>
+					</httpConnector>
 					<systemProperties>
 						<systemProperty>
 							<name>spring.profiles.active</name>
@@ -235,6 +236,11 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-util</artifactId>
+			<version>9.2.1.v20140609</version>
+		</dependency>
 	</dependencies>
 
 	<distributionManagement>
@@ -285,6 +291,48 @@
 								<goals>
 									<goal>integration-test</goal>
 									<goal>verify</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.eclipse.jetty</groupId>
+						<artifactId>jetty-maven-plugin</artifactId>
+						<version>9.2.1.v20140609</version>
+						<configuration>
+							<scanIntervalSeconds>10</scanIntervalSeconds>
+							<stopPort>9999</stopPort>
+							<stopKey>STOP</stopKey>
+							<webApp>
+								<contextPath>/jsf2-helloworld</contextPath>
+							</webApp>
+							<httpConnector>
+								<port>9090</port>
+							</httpConnector>
+							<systemProperties>
+								<systemProperty>
+									<name>spring.profiles.active</name>
+									<value>dev</value>
+								</systemProperty>
+							</systemProperties>
+						</configuration>
+						<executions>
+							<execution>
+								<id>start-jetty</id>
+								<phase>pre-integration-test</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+								<configuration>
+									<scanIntervalSeconds>0</scanIntervalSeconds>
+									<daemon>true</daemon>
+								</configuration>
+							</execution>
+							<execution>
+								<id>stop-jetty</id>
+								<phase>post-integration-test</phase>
+								<goals>
+									<goal>stop</goal>
 								</goals>
 							</execution>
 						</executions>
