--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
 		<jetty.version>8.1.3.v20120416</jetty.version>
 	</properties>
 
+	<scm>
+		<connection>scm:git:https://github.com/fred4jupiter/jsf2-helloworld.git</connection>
+		<url>https://github.com/fred4jupiter/jsf2-helloworld</url>
+	</scm>
+
 	<build>
 		<resources>
 			<resource>
@@ -91,6 +96,38 @@
 					<password>deployer</password>
 					<path>/jsf2-helloworld</path>
 					<update>true</update>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>buildnumber-maven-plugin</artifactId>
+				<version>1.3</version>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>create</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<doCheck>true</doCheck>
+					<doUpdate>true</doUpdate>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.0.2</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+						</manifest>
+						<manifestEntries>
+							<Implementation-Build>$\{buildNumber}</Implementation-Build>
+						</manifestEntries>
+					</archive>
 				</configuration>
 			</plugin>
 		</plugins>
