--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
 		<jetty.version>8.1.3.v20120416</jetty.version>
 	</properties>
+	
+	<description>Test project for Continuous Delivery</description>
 
 	<scm>
 		<connection>scm:git:https://github.com/fred4jupiter/jsf2-helloworld.git</connection>
