--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 		<jetty.version>8.1.3.v20120416</jetty.version>
 	</properties>
 	
-	<description>Test project for Continuous Delivery</description>
+	<description>Test project for Continuous Delivery.</description>
 
 	<scm>
 		<connection>scm:git:https://github.com/fred4jupiter/jsf2-helloworld.git</connection>
