--- a/pom.xml
+++ b/pom.xml
@@ -100,43 +100,12 @@
 					<update>true</update>
 				</configuration>
 			</plugin>
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.codehaus.mojo</groupId> -->
-<!-- 				<artifactId>buildnumber-maven-plugin</artifactId> -->
-<!-- 				<version>1.3</version> -->
-<!-- 				<executions> -->
-<!-- 					<execution> -->
-<!-- 						<phase>validate</phase> -->
-<!-- 						<goals> -->
-<!-- 							<goal>create</goal> -->
-<!-- 						</goals> -->
-<!-- 					</execution> -->
-<!-- 				</executions> -->
-<!-- 				<configuration> -->
-<!-- 					<doCheck>false</doCheck> -->
-<!-- 					<doUpdate>false</doUpdate> -->
-<!-- 					<shortrevisionlength>5</shortrevisionlength> -->
-<!-- 					<format>{0,date,yyyy-MM-dd HH:mm:ss}</format> -->
-<!-- 					<items> -->
-<!-- 						<item>timestamp</item> -->
-<!-- 					</items> -->
-<!-- 				</configuration> -->
-<!-- 			</plugin> -->
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
-<!-- 				<artifactId>maven-war-plugin</artifactId> -->
-<!-- 				<version>2.0.2</version> -->
-<!-- 				<configuration> -->
-<!-- 					<archive> -->
-<!-- 						<manifest> -->
-<!-- 							<addDefaultImplementationEntries>true</addDefaultImplementationEntries> -->
-<!-- 						</manifest> -->
-<!-- 						<manifestEntries> -->
-<!-- 							<Implementation-Build>${buildNumber}</Implementation-Build> -->
-<!-- 						</manifestEntries> -->
-<!-- 					</archive> -->
-<!-- 				</configuration> -->
-<!-- 			</plugin> -->
+            <!-- You can find this plugin at https://github.com/fred4jupiter/baseversion-maven-plugin -->
+            <plugin>
+                <groupId>org.fred4jupiter.baseversion</groupId>
+                <artifactId>baseversion-maven-plugin</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </plugin>
 		</plugins>
 	</build>
 
