--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 	</scm>
 
 	<build>
+		<finalName>${project.artifactId}</finalName>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
